Možnost seřadit osobní karty podle abecedy nebo řetězce, oprava sdílení vlastních podmnožin karet, oprava trojtečkového menu osobních karet, zobrazení speciálního textu na tlačítku automatické detekce karet, pokud je vypnuta Wi-Fi.